--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
-  banner: "your awesome url"
+  heading: "Suleiman Musallam"
+  subheading: "E-Portfolio"
+  banner: "Career & Academic Contributions"
