--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Career & Academic Contributions
+title: Building IT Experiences that Empower and Delight Users
 email: Suliman_Musallam@outlook.com
 author: Bambozie
 
